--- a/web-flask/templates/index.html
+++ b/web-flask/templates/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flask Docker</title>
+    <title>Flask</title>
 </head>
 <body>
-    <h1>This is a Flask App containerised with Docker</h1>
+    '<h1> The is a response from:' + ip_addr</h1>
 </body>
 </html>
