--- a/web-flask/templates/index.html
+++ b/web-flask/templates/index.html
@@ -6,6 +6,6 @@
     <title>Flask</title>
 </head>
 <body>
-    '<h1> The is a response from:' + ip_addr</h1>
+    <h1> The is a respond from backend compute engine</h1>
 </body>
 </html>
