--- a/web-flask/templates/index.html
+++ b/web-flask/templates/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flask</title>
+    <title>Flask App</title>
 </head>
 <body>
-    <h1> The is a respond from backend compute engine</h1>
+    <h1>This is a Flask App response</h1>
 </body>
 </html>
